--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@ html {
     background-image: url('https://lh3.googleusercontent.com/pw/AP1GczPshju85ics-C7ZqXkbVVIwjC4kFpH_E7_lsoKfxLNF8LQ0Lyjk9hF1C1BpYTKUsMIKnUuWVR2_laZE7SucvbsnwtHIMWmwnTZoxIIZwAvaTwcvpVpqwOlC_QG5frJnodwZrzFpKXSyE0cIHA6DacTU=w1418-h945-s-no-gm?authuser=0=Selamat+Datang+di+KlubFisika+13+Yogyakarta');
     background-size: cover;
     background-position: center;
-    background-attachment: flex; /* Memberikan efek parallax sederhana */
+    background-attachment: fixed;
+    display: flex;/* Memberikan efek parallax sederhana */
 }
 
 /* Styling untuk Judul Bagian (Section Title) */
