--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html {
 /* Styling untuk Hero Section Background */
 .hero-bg {
     /* Ganti URL ini dengan URL gambar latar belakang organisasi Anda yang sebenarnya */
-    background-image: url('https://lh3.googleusercontent.com/pw/AP1GczPshju85ics-C7ZqXkbVVIwjC4kFpH_E7_lsoKfxLNF8LQ0Lyjk9hF1C1BpYTKUsMIKnUuWVR2_laZE7SucvbsnwtHIMWmwnTZoxIIZwAvaTwcvpVpqwOlC_QG5frJnodwZrzFpKXSyE0cIHA6DacTU=w1418-h945-s-no-gm?authuser=0=Selamat+Datang+di+KlubFisika+13+Yogyakarta');
+    background-image: url('https://drive.google.com/file/d/1T-Lshv7tyW-TByLzDfZxk8-KsR7l9iqs/view?usp=drive_link=Selamat+Datang+di+KlubFisika+13+Yogyakarta');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
